PluginManager: Fix memory leak.

* Fixes #13126.